Remove TITLE: and HEADING: directives from section templates

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ ALIGN: left
 VALIGN: center
 MIN HEIGHT: 320
 CONTAINER ALIGN: center
-BG: https://beontop.netlify.app/16x9-1600x900.jpg
+BG: [INSERT BACKGROUND IMAGE URL]
 OVERLAY: 0.45
 TITLE COLOR: #FFFFFF
 TEXT COLOR: #FFFFFF
@@ -394,11 +394,12 @@ BTN COLOR: #FFFFFF
 BTN BG: linear-gradient(90deg, rgba(255,255,255,0.28), rgba(255,255,255,0.06))
 BTN RADIUS: pill
 BTN BORDER: 1px solid #FFFFFF
-Premium Car Detailing in Dubai
-Top products & pro equipment. 
-Ask about paint correction and ceramic coating.
-CTA: Book now | /book
-BTN: Get a quote | /quote
+
+[INSERT MAIN HEADING HERE]
+[INSERT DESCRIPTION TEXT HERE]
+
+CTA: [BUTTON_TEXT] | [BUTTON_URL]
+BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 /* end */</pre>
                         </div>
                     </div>
@@ -415,7 +416,7 @@ MIN HEIGHT: 300
 HERO WIDTH: 900
 CONTAINER WIDTH: 1100 | 88%
 CONTAINER ALIGN: center
-BG: #F6F8FA
+BG: [INSERT BACKGROUND COLOR OR IMAGE]
 OVERLAY: off
 TITLE COLOR: #0F172A
 TEXT COLOR: #0F172A
@@ -434,10 +435,12 @@ BTN COLOR: #000000
 BTN BG: #ffffff
 BTN RADIUS: 10
 BTN BORDER: 1px solid #000000
-Detailing Bundle Sale
-Save up to 20% on interior + exterior packages. 
-* Limited slots — see terms.
-BTN: View services | /services
+
+[INSERT MAIN HEADING HERE]
+[INSERT DESCRIPTION TEXT HERE]
+[INSERT ADDITIONAL TEXT HERE]
+
+BTN: [BUTTON_TEXT] | [BUTTON_URL]
 /* end */</pre>
                         </div>
                     </div>
@@ -450,12 +453,12 @@ BTN: View services | /services
 LAYOUT: Banner right
 ALIGN: right
 VALIGN: bottom
-HEADING: H2
+ 
 MIN HEIGHT: 420
 HERO WIDTH: 1000
 CONTAINER WIDTH: 1100 | 92%
 CONTAINER ALIGN: center
-BG: https://beontop.netlify.app/16x9-1600x900.jpg
+BG: [INSERT BACKGROUND IMAGE URL]
 OVERLAY: linear-gradient(180deg, rgba(0,0,0,0.35), rgba(0,0,0,0.75))
 TITLE COLOR: #FFFFFF
 TEXT COLOR: #E8F0FE
@@ -474,10 +477,13 @@ BTN COLOR: #111111
 BTN BG: #FFFFFF
 BTN RADIUS: 9999
 BTN BORDER: 2px solid #FFFFFF
-TITLE: Business-Class Detailing
-Restore deep gloss and protect with ceramic coatings. Free consultation.
-CTA: Consultation | /consultation
-BTN: Get a quote | /quote
+
+ 
+[INSERT MAIN HEADING HERE]
+[INSERT DESCRIPTION TEXT HERE]
+
+CTA: [BUTTON_TEXT] | [BUTTON_URL]
+BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 /* end */</pre>
                         </div>
                     </div>
@@ -490,19 +496,19 @@ BTN: Get a quote | /quote
 LAYOUT: Banner left
 ALIGN: center
 VALIGN: center
-HEADING: H1
+ 
 MIN HEIGHT: 420
 HERO WIDTH: 900
 CONTAINER WIDTH: 1000 | 88%
 CONTAINER ALIGN: center
-BG: #FAFAFA
+BG: [INSERT BACKGROUND COLOR OR IMAGE]
 OVERLAY: off
 TITLE COLOR: #0F172A
 TEXT COLOR: #0F172A
 RADIUS SECTION: 12
 PADDING SECTION: 36 20
 BORDER SECTION: 1px solid #EEEEEE
-BG CONTAINER: url('https://beontop.netlify.app/16x9-1600x900.jpg')
+BG CONTAINER: url('[INSERT CONTAINER BACKGROUND IMAGE]')
 OVERLAY CONTAINER: rgba(0,0,0,0)
 RADIUS CONTAINER: 12
 PADDING CONTAINER: 32 32
@@ -514,9 +520,12 @@ BTN COLOR: #FFFFFF
 BTN BG: linear-gradient(90deg, #2563EB, #7C3AED)
 BTN RADIUS: 14
 BTN BORDER: none
-TITLE: Complete Car Makeover
-Polishing, interior deep clean, PPF. Browse projects and customer reviews.
-BTN: Contact us | /contact
+
+ 
+[INSERT MAIN HEADING HERE]
+[INSERT DESCRIPTION TEXT HERE]
+
+BTN: [BUTTON_TEXT] | [BUTTON_URL]
 /* end */</pre>
                         </div>
                     </div>
@@ -530,22 +539,26 @@ BTN: Contact us | /contact
                         <h4>Our Services</h4>
                         <pre>/* start */
 LAYOUT: Media left
-TITLE: Our Services
-HEADING: H2
+ 
+ 
 COLS: 40 60
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Premium Car Detailing
-DESC TOP: This is helper text above content
+IMG: [INSERT IMAGE URL] | [INSERT IMAGE ALT TEXT]
+DESC TOP: [INSERT TOP DESCRIPTION TEXT]
 DESC TOP ALIGN: left
-Interior Detailing
-Deep cleaning and conditioning of your car's interior surfaces.
-Exterior Detailing
-Polishing, waxing, and protection for long-lasting shine.
-Paint Protection
-Advanced ceramic coating to keep your car looking brand new.
-DESC BOTTOM: Additional helper text below content
+
+[INSERT MAIN HEADING HERE]
+[INSERT FIRST SERVICE DESCRIPTION]
+
+[INSERT SECOND HEADING HERE]
+[INSERT SECOND SERVICE DESCRIPTION]
+
+[INSERT THIRD HEADING HERE]
+[INSERT THIRD SERVICE DESCRIPTION]
+
+DESC BOTTOM: [INSERT BOTTOM DESCRIPTION TEXT]
 DESC BOTTOM ALIGN: left
-BTN: Book Now | /book
-CTA: Learn more | /contact
+BTN: [BUTTON_TEXT] | [BUTTON_URL]
+CTA: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 /* end */</pre>
                         </div>
                     </div>
@@ -559,18 +572,24 @@ CTA: Learn more | /contact
                         <h4>Questions & Answers</h4>
                         <pre>/* start */
 LAYOUT: FAQ
-TITLE: Questions & Answers
+ 
 DESC TOP ALIGN: center
-DESC TOP: The most common questions from our customers.
+DESC TOP: [INSERT TOP DESCRIPTION TEXT]
 FAQ MODE: static
 FAQ ITEM BORDER: 1px solid #e5e7eb
 CARD RADIUS: 10
-Q: How long does shipping take?
-A: Typically 3–5 business days within the country and 5–10 days for neighboring regions.
-Q: Can I modify my order after placing it?
-A: Yes, within 2 hours via your account or by contacting support.
-Q: Do you accept returns?
-A: Yes, within 30 days of purchase — full refund.
+
+Q: [INSERT FIRST QUESTION HERE]
+A: [INSERT FIRST ANSWER HERE]
+
+Q: [INSERT SECOND QUESTION HERE]
+A: [INSERT SECOND ANSWER HERE]
+
+Q: [INSERT THIRD QUESTION HERE]
+A: [INSERT THIRD ANSWER HERE]
+
+Q: [INSERT FOURTH QUESTION HERE]
+A: [INSERT FOURTH ANSWER HERE]
 /* end */</pre>
                         </div>
                     </div>
@@ -584,23 +603,28 @@ A: Yes, within 30 days of purchase — full refund.
                         <h4>Our Works Zigzag</h4>
                         <pre>/* start */
 LAYOUT: Zigzag
-TITLE: Our works
+ 
 COLS: 40 60
 IMAGE SIZE (RATIO): 4/3
 PADDING: 24 16
 MARGIN: 0 0 30 0
-DESC TOP: краткое описание секции сверху
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Interior detailing
-(Здесь H3 и текст абзацами)
-BTN: Book now | /book
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Exterior detailing
-H3 Заголовок 2
-Описательный текст...
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Protective films
-H3 Заголовок 3
-Текст...
-CTA: Get a quote | /quote
-DESC BOTTOM: примечание или дисклеймер
+DESC TOP: [INSERT TOP DESCRIPTION TEXT]
+
+IMG: [INSERT FIRST IMAGE URL] | [INSERT FIRST IMAGE ALT]
+[INSERT FIRST HEADING HERE]
+[INSERT FIRST DESCRIPTION TEXT]
+BTN: [INSERT FIRST BUTTON TEXT] | [INSERT FIRST BUTTON URL]
+
+IMG: [INSERT SECOND IMAGE URL] | [INSERT SECOND IMAGE ALT]
+[INSERT SECOND HEADING HERE]
+[INSERT SECOND DESCRIPTION TEXT]
+
+IMG: [INSERT THIRD IMAGE URL] | [INSERT THIRD IMAGE ALT]
+[INSERT THIRD HEADING HERE]
+[INSERT THIRD DESCRIPTION TEXT]
+
+CTA: [INSERT CTA BUTTON TEXT] | [INSERT CTA BUTTON URL]
+DESC BOTTOM: [INSERT BOTTOM DESCRIPTION TEXT]
 /* end */</pre>
                         </div>
                     </div>
@@ -614,7 +638,7 @@ DESC BOTTOM: примечание или дисклеймер
                         <h4>What Our Clients Say</h4>
                         <pre>/* start */
 LAYOUT: Cards 3col
-TITLE: What Our Clients Say
+TITLE: [INSERT SECTION TITLE HERE]
 IMAGE SIZE (RATIO): 4/1
 CARD RADIUS: 12
 BORDER CARD: none
@@ -622,10 +646,11 @@ CARD SHADOW: soft
 CARD ALIGN: left
 CARD TITLE COLOR: #111111
 CARD COLOR: #555555
-DESC TOP: Real stories from our clients
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | ★★★★★  Ahmed Al Nuaimi | "Very careful, fast, and reasonably priced. The car looks like new!"
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | ★★★★☆  Maria K. | "They finished the interior detailing in one day. Polite staff — I'll be back."
-IMG: https://beontop.netlify.app/16x9-1600x900.jpg | ★★★★★  Omar S. | "Best ceramic coating in Dubai. Water just beads off — top-notch!"
+DESC TOP: [INSERT TOP DESCRIPTION TEXT]
+
+IMG: [INSERT FIRST IMAGE URL] | [INSERT FIRST RATING] [INSERT FIRST CLIENT NAME] | "[INSERT FIRST TESTIMONIAL TEXT]"
+IMG: [INSERT SECOND IMAGE URL] | [INSERT SECOND RATING] [INSERT SECOND CLIENT NAME] | "[INSERT SECOND TESTIMONIAL TEXT]"
+IMG: [INSERT THIRD IMAGE URL] | [INSERT THIRD RATING] [INSERT THIRD CLIENT NAME] | "[INSERT THIRD TESTIMONIAL TEXT]"
 /* end */</pre>
                         </div>
                     </div>
@@ -639,19 +664,21 @@ IMG: https://beontop.netlify.app/16x9-1600x900.jpg | ★★★★★  Omar S. | 
                         <h4>Text Block Example 1</h4>
                         <pre>/* start */
 LAYOUT: Text block
-TITLE: Welcome to Our Service
-HEADING: H2
+TITLE: [INSERT SECTION TITLE HERE]
+ 
 ALIGN: center
-BG: #f8f9fa
+BG: [INSERT BACKGROUND COLOR OR IMAGE]
 PADDING: 40 20
 MARGIN: 20 0
 RADIUS: 12
 BORDER: 1px solid #e9ecef
 TITLE COLOR: #333333
 TEXT COLOR: #666666
-Welcome to our premium car detailing service. We provide professional automotive care with attention to detail and quality results.
-BTN: Learn More | /about
-CTA: Contact Us | /contact
+
+[INSERT MAIN DESCRIPTION TEXT HERE]
+
+BTN: [INSERT BUTTON TEXT] | [INSERT BUTTON URL]
+CTA: [INSERT CTA BUTTON TEXT] | [INSERT CTA BUTTON URL]
 /* end */</pre>
                         </div>
                     </div>
