--- a/index.html
+++ b/index.html
@@ -45,9 +45,20 @@
             background: #dee2e6;
             border-radius: 8px;
             border: 1px dashed #adb5bd;
-            background-size: contain;
-            background-position: top center;
-            background-repeat: no-repeat;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+        }
+        
+        .section-media img {
+            max-width: 100%;
+            max-height: 100%;
+            width: auto;
+            height: auto;
+            object-fit: contain;
+            object-position: top center;
+            display: block;
         }
         .section-content {
             flex: 1;
@@ -365,8 +376,10 @@
                     <h3>Banners</h3>
 
 
-                    <div class="section" data-image="https://beontop.netlify.app/16x9-1600x900.jpg">
-                        <div class="section-media"></div>
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.38.06_PM.jpg" alt="Banner Left Split Example">
+                        </div>
                         <div class="section-content">
                         <h4>Banner Left Split</h4>
                         <pre>/* start */
@@ -404,8 +417,10 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
                         </div>
                     </div>
 
-                    <div class="section" data-image="https://beontop.netlify.app/16x9-1600x900.jpg">
-                        <div class="section-media"></div>
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.07_PM.jpg" alt="Banner Center Split Example">
+                        </div>
                         <div class="section-content">
                         <h4>Banner Center Split</h4>
                         <pre>/* start */
@@ -445,8 +460,10 @@ BTN: [BUTTON_TEXT] | [BUTTON_URL]
                         </div>
                     </div>
 
-                    <div class="section" data-image="https://beontop.netlify.app/16x9-1600x900.jpg">
-                        <div class="section-media"></div>
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.18_PM.jpg" alt="Banner Right Example">
+                        </div>
                         <div class="section-content">
                         <h4>Banner Right</h4>
                         <pre>/* start */
@@ -488,8 +505,10 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
                         </div>
                     </div>
 
-                    <div class="section" data-image="https://beontop.netlify.app/16x9-1600x900.jpg">
-                        <div class="section-media"></div>
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.32_PM.jpg" alt="Banner Left Example">
+                        </div>
                         <div class="section-content">
                         <h4>Banner Left</h4>
                         <pre>/* start */
