Fix image paths and add .nojekyll for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.38.06_PM.jpg" alt="Banner Left Split Example">
+                            <img src="screenshots/banners/banner_left_split.jpg" alt="Banner Left Split Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Left Split</h4>
@@ -419,7 +419,7 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.07_PM.jpg" alt="Banner Center Split Example">
+                            <img src="screenshots/banners/banner_center_split.jpg" alt="Banner Center Split Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Center Split</h4>
@@ -462,7 +462,7 @@ BTN: [BUTTON_TEXT] | [BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.18_PM.jpg" alt="Banner Right Example">
+                            <img src="screenshots/banners/banner_right.jpg" alt="Banner Right Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Right</h4>
@@ -507,7 +507,7 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/Screenshot_2025-09-18_at_2.39.32_PM.jpg" alt="Banner Left Example">
+                            <img src="screenshots/banners/banner_left.jpg" alt="Banner Left Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Left</h4>
