Update image paths and fix layout proportions (70:30)

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             align-items: stretch;
         }
         .section-media {
-            flex: 1;
+            flex: 7;
             min-height: 220px;
             background: #dee2e6;
             border-radius: 8px;
@@ -61,7 +61,7 @@
             display: block;
         }
         .section-content {
-            flex: 1;
+            flex: 3;
             display: flex;
             flex-direction: column;
             position: relative;
@@ -333,7 +333,7 @@
             padding: 1rem;
             border-radius: 6px;
             border: 1px solid #dee2e6;
-            font-size: 0.9rem;
+            font-size: 6px;
             line-height: 1.4;
             overflow-x: auto;
             white-space: pre-wrap;
@@ -378,7 +378,7 @@
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/banner_left_split.jpg" alt="Banner Left Split Example">
+                            <img src="screenshots/banners/1.jpg" alt="Banner Left Split Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Left Split</h4>
@@ -419,7 +419,7 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/banner_center_split.jpg" alt="Banner Center Split Example">
+                            <img src="screenshots/banners/2.jpg" alt="Banner Center Split Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Center Split</h4>
@@ -462,7 +462,7 @@ BTN: [BUTTON_TEXT] | [BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/banner_right.jpg" alt="Banner Right Example">
+                            <img src="screenshots/banners/3.jpg" alt="Banner Right Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Right</h4>
@@ -507,7 +507,7 @@ BTN: [SECONDARY_BUTTON_TEXT] | [SECONDARY_BUTTON_URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/banner_left.jpg" alt="Banner Left Example">
+                            <img src="screenshots/banners/4.jpg" alt="Banner Left Example">
                         </div>
                         <div class="section-content">
                         <h4>Banner Left</h4>
