--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             <div class="tabs-container">
                 <div class="tabs-nav">
                     <button class="tab-button active" data-tab="banners">Banners</button>
-                    <button class="tab-button" data-tab="textblocks">Media with text</button>
+                    <button class="tab-button" data-tab="textblocks">TextBlocks (and Media)</button>
                     <button class="tab-button" data-tab="benefits">Benefits</button>
                     <button class="tab-button" data-tab="faqs">FAQs</button>
                     <button class="tab-button" data-tab="galleries">Galleries</button>
@@ -551,62 +551,76 @@ BTN: [BUTTON_TEXT] | [BUTTON_URL]
                 </div>
 
                 <div class="tab-content" id="textblocks">
-                    <h3>Media with text</h3>
+                    <h3>TextBlocks (and Media)</h3>
                     
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/1.jpg" alt="Media Left Example">
+                            <img src="screenshots/TextBlocks (and Media)/1.jpg" alt="Text Block Example">
                         </div>
                         <div class="section-content">
-                        <h4>Media Left</h4>
+                        <h4>Text Block</h4>
                         <pre>/* start */
-LAYOUT: Media left
+LAYOUT: Text block
 TITLE: [INSERT SECTION TITLE HERE]
-HEADING: H2
-COLS: 40 60
-IMG: [INSERT IMAGE URL] | [INSERT IMAGE ALT TEXT]
-DESC TOP: [INSERT TOP DESCRIPTION TEXT]
-DESC TOP ALIGN: left
+CONTAINER WIDTH: 1100 | 92%
+ALIGN CONTAINER: center
+ALIGN: center
+BG SECTION: #f5f5f5
 
-H3 [INSERT FIRST HEADING HERE]
-[INSERT FIRST PARAGRAPH TEXT HERE]
+H3 [INSERT MAIN HEADING HERE]
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
 H3 [INSERT SECOND HEADING HERE]
-[INSERT SECOND PARAGRAPH TEXT HERE]
+[INSERT FIRST LIST ITEM]
+[INSERT SECOND LIST ITEM]
+[INSERT THIRD LIST ITEM]
 
-H3 [INSERT THIRD HEADING HERE]
-— [INSERT FIRST LIST ITEM]
-— [INSERT SECOND LIST ITEM]
-— [INSERT THIRD LIST ITEM]
-
-DESC BOTTOM: [INSERT BOTTOM DESCRIPTION TEXT]
-DESC BOTTOM ALIGN: left
-BTN: [INSERT BUTTON TEXT] | [INSERT BUTTON URL]
-CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
+CTA: [INSERT CTA BUTTON TEXT] | /contact
 /* end */</pre>
                         </div>
                     </div>
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/2.jpg" alt="Media Right Example">
+                            <img src="screenshots/TextBlocks (and Media)/2.jpg" alt="Text Block Example">
                         </div>
                         <div class="section-content">
-                        <h4>Media Right</h4>
+                        <h4>Text Block</h4>
                         <pre>/* start */
-LAYOUT: Media right
+LAYOUT: Text block
 TITLE: [INSERT SECTION TITLE HERE]
-HEADING: H2
-COLS: 50 50
-IMAGE SIZE (RATIO): 5/2
-IMG: [INSERT IMAGE URL] | [INSERT IMAGE ALT TEXT]
-DESC TOP: [INSERT TOP DESCRIPTION TEXT]
-DESC TOP ALIGN: center
+CONTAINER WIDTH: 1100 | 92%
+ALIGN CONTAINER: center
+ALIGN: center
 
 H3 [INSERT MAIN HEADING HERE]
-[INSERT PARAGRAPH TEXT HERE]
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
 
+CTA: [INSERT CTA BUTTON TEXT] | /contact
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/TextBlocks (and Media)/3.jpg" alt="Media Left Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Media Left</h4>
+                        <pre>/* start */
+LAYOUT: Media left
+TITLE: H2 [INSERT SECTION TITLE HERE]
+HEADING: h2
+DESC TOP: [INSERT TOP DESCRIPTION TEXT]
+DESC TOP ALIGN: center
+COLS: 40 60
+BTN BG: #f5f5f5
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | [INSERT IMAGE ALT TEXT]
+H3 [INSERT FIRST HEADING HERE]
+[INSERT FIRST PARAGRAPH TEXT HERE]
 H3 [INSERT SECOND HEADING HERE]
+[INSERT SECOND PARAGRAPH TEXT HERE]
+H3 [INSERT THIRD HEADING HERE]
 — [INSERT FIRST LIST ITEM]
 — [INSERT SECOND LIST ITEM]
 — [INSERT THIRD LIST ITEM]
@@ -621,7 +635,32 @@ CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/3.jpg" alt="Media Stack Example">
+                            <img src="screenshots/TextBlocks (and Media)/4.jpg" alt="Media Right Example">
+                        </div>
+                        <div class="section-content">
+                        <h4>Media Right</h4>
+                        <pre>/* start */
+LAYOUT: Media right
+BG SECTION: #f5f5f5
+BTN BORDER: 1px solid #000000
+COLS: 40 60
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | [INSERT IMAGE ALT TEXT]
+H2 [INSERT SECTION TITLE HERE]
+
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.
+
+DESC BOTTOM: [INSERT BOTTOM DESCRIPTION TEXT]
+DESC BOTTOM ALIGN: center
+BTN: [INSERT BUTTON TEXT] | [INSERT BUTTON URL]
+CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
+/* end */</pre>
+                        </div>
+                    </div>
+
+                    <div class="section">
+                        <div class="section-media">
+                            <img src="screenshots/TextBlocks (and Media)/5.jpg" alt="Media Stack Example">
                         </div>
                         <div class="section-content">
                         <h4>Media Stack</h4>
@@ -629,54 +668,60 @@ CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
 LAYOUT: Media stack
 IMAGE SIZE (RATIO): 16/9
 TITLE: [INSERT SECTION TITLE HERE]
-CAP: [INSERT IMAGE CAPTION]
-PADDING SECTION: 40 20
 CONTAINER WIDTH: 1100 | 92%
 CONTAINER ALIGN: center
-IMG: [INSERT IMAGE URL] | [INSERT IMAGE ALT TEXT]
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | [INSERT IMAGE ALT TEXT]
 
 H3 [INSERT MAIN HEADING HERE]
-[INSERT PARAGRAPH TEXT HERE]
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis.
 
 H3 [INSERT SECOND HEADING HERE]
-— [INSERT FIRST LIST ITEM]
-— [INSERT SECOND LIST ITEM]
-— [INSERT THIRD LIST ITEM]
+[INSERT FIRST LIST ITEM]
+[INSERT SECOND LIST ITEM]
+[INSERT THIRD LIST ITEM]
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat.
 
-BTN: [INSERT BUTTON TEXT] | [INSERT BUTTON URL]
+BTN BG: #f5f5f5
 CTA: [INSERT CTA BUTTON TEXT] | [INSERT CTA BUTTON URL]
 /* end */</pre>
                         </div>
                     </div>
 
+
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/banners/4.jpg" alt="Media Stack Wide Example">
+                            <img src="screenshots/TextBlocks (and Media)/6.jpg" alt="Zigzag bgflip Example">
                         </div>
                         <div class="section-content">
-                        <h4>Media Stack Wide</h4>
+                        <h4>Zigzag bgflip</h4>
                         <pre>/* start */
-LAYOUT: Media stack
-IMAGE SIZE (RATIO): 5/2
-TITLE: [INSERT SECTION TITLE HERE]
+LAYOUT: Zigzag bgflip
+TITLE: H2 [INSERT SECTION TITLE HERE]
+COLS: 40 60
+IMAGE SIZE (RATIO): 5/3
 DESC TOP: [INSERT TOP DESCRIPTION TEXT]
-BG: [INSERT BACKGROUND COLOR OR IMAGE]
-CONTAINER WIDTH: 1100 | 90%
-CONTAINER ALIGN: center
-PADDING CONTAINER: 24 24
-BORDER CONTAINER: 1px solid rgba(0,0,0,0.08)
-RADIUS CONTAINER: 16
-IMG: [INSERT IMAGE URL] | [INSERT IMAGE ALT TEXT]
+DESC TOP ALIGN: center
 
-H3 [INSERT MAIN HEADING HERE]
-[INSERT PARAGRAPH TEXT HERE]
-
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Exterior detailing
 H3 [INSERT SECOND HEADING HERE]
-— [INSERT FIRST LIST ITEM]
-— [INSERT SECOND LIST ITEM]
-— [INSERT THIRD LIST ITEM]
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit semper vel class aptent taciti sociosqu ad litora torquent per conubia nostra inceptos himenaeos orci varius natoque penatibus et magnis dis parturient montes nascetur ridiculus mus donec rhoncus eros lobortis nulla molestie mattis scelerisque maximus eget fermentum odio phasellus non purus est efficitur laoreet mauris pharetra vestibulum fusce dictum risus.
+CTA: Get a quote | /quote
+ROW BG:
 
-BTN: [INSERT BUTTON TEXT] | [INSERT BUTTON URL]
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Interior detailing
+H3 [INSERT SECOND HEADING HERE]
+[INSERT FIRST LIST ITEM]
+[INSERT SECOND LIST ITEM]
+[INSERT THIRD LIST ITEM]
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat.
+BTN: Book now | /book
+ROW BG: #f5f5f5
+
+IMG: https://beontop.netlify.app/16x9-1600x900.jpg | Protective films
+H3 [INSERT SECOND HEADING HERE]
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
+Lorem ipsum dolor sit amet consectetur adipiscing elit quisque faucibus ex sapien vitae pellentesque sem placerat in id cursus mi pretium tellus duis convallis tempus leo eu aenean sed diam urna tempor pulvinar vivamus fringilla lacus nec metus bibendum egestas iaculis massa nisl malesuada lacinia integer nunc posuere ut hendrerit.
+ROW BG:
 /* end */</pre>
                         </div>
                     </div>
