Remove min-height from section-media and change align-items to flex-start

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
         .section {
             display: flex;
             gap: 1.5rem;
-            align-items: stretch;
+            align-items: flex-start;
         }
         .section-media {
             flex: 7;
-            min-height: 220px;
             background: #dee2e6;
             border-radius: 8px;
             border: 1px dashed #adb5bd;
