Исправлены пути к изображениям в табе TextBlocks (and Media)

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ BTN: [BUTTON_TEXT] | [BUTTON_URL]
                     
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/1.jpg" alt="Text Block Example">
+                            <img src="screenshots/textblocks/1.jpg" alt="Text Block Example">
                         </div>
                         <div class="section-content">
                         <h4>Text Block</h4>
@@ -581,7 +581,7 @@ CTA: [INSERT CTA BUTTON TEXT] | /contact
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/2.jpg" alt="Text Block Example">
+                            <img src="screenshots/textblocks/2.jpg" alt="Text Block Example">
                         </div>
                         <div class="section-content">
                         <h4>Text Block</h4>
@@ -602,7 +602,7 @@ CTA: [INSERT CTA BUTTON TEXT] | /contact
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/3.jpg" alt="Media Left Example">
+                            <img src="screenshots/textblocks/3.jpg" alt="Media Left Example">
                         </div>
                         <div class="section-content">
                         <h4>Media Left</h4>
@@ -634,7 +634,7 @@ CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/4.jpg" alt="Media Right Example">
+                            <img src="screenshots/textblocks/4.jpg" alt="Media Right Example">
                         </div>
                         <div class="section-content">
                         <h4>Media Right</h4>
@@ -659,7 +659,7 @@ CTA: [INSERT SECONDARY BUTTON TEXT] | [INSERT SECONDARY BUTTON URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/5.jpg" alt="Media Stack Example">
+                            <img src="screenshots/textblocks/5.jpg" alt="Media Stack Example">
                         </div>
                         <div class="section-content">
                         <h4>Media Stack</h4>
@@ -689,7 +689,7 @@ CTA: [INSERT CTA BUTTON TEXT] | [INSERT CTA BUTTON URL]
 
                     <div class="section">
                         <div class="section-media">
-                            <img src="screenshots/TextBlocks (and Media)/6.jpg" alt="Zigzag bgflip Example">
+                            <img src="screenshots/textblocks/6.jpg" alt="Zigzag bgflip Example">
                         </div>
                         <div class="section-content">
                         <h4>Zigzag bgflip</h4>
